W02 Home Page Enhancement

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Johann Vasquez | WDD 130</title>
+    <meta name="description" content="Johann Vasquez WDD130, this is my first web page. ">
+    <meta name="author" content="Johann Vasquez">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -22,6 +24,11 @@
             studying software development at BYU, and it is amazing how much I can learn from them and all that they’re
             capable of. I'm excited to learn more about web development and how web pages work.</p>
     </main>
+    <aside>
+        <h2>Panama</h2>
+        <img src="images/Panama.webp" alt="Panama City">
+        <p>Panama City is full of life—bright sun shines on tall buildings while fishermen work by the water. The old town has pretty streets, busy squares, and tasty snacks. The canal is amazing to see, and the sunset turns the sky orange and pink. It’s a happy, exciting place!</p>
+    </aside>
     <footer>
         <p>&copy;2025 💻 Johann Vasquez 💻 Panama, Panama</p>
     </footer>
