--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <aside>
         <h2>Panama</h2>
         <img src="images/panama.webp" alt="Panama City">
-        <p>Panama City is full of life—bright sun shines on tall buildings while fishermen work by the water. The old town has pretty streets, busy squares, and tasty snacks. The canal is amazing to see, and the sunset turns the sky orange and pink. It’s a happy, exciting place!</p>
+        <p>Panama City is full of life—bright sun shines on tall buildings while fishermen work by the water. The old
+            town has pretty streets, busy squares, and tasty snacks. The canal is amazing to see, and the sunset turns
+            the sky orange and pink. It’s a happy, exciting place!</p>
     </aside>
     <footer>
         <p>&copy;2025 💻 Johann Vasquez 💻 Panama, Panama</p>
