Rafting Site - About Us Page

--- a/index.html
+++ b/index.html
@@ -15,16 +15,36 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Site</a>
+            <a href="https://www.linkedin.com/in/johann-alexander-v%C3%A1squez-madero-169858357/">My Linkedin
+                Profile</a>
+            <a href="https://facebook.com.">Facebook</a>
         </nav>
     </header>
     <main>
         <h1>Johann Vasquez | WDD 130</h1>
         <img src="images/profile.webp" alt="Hello my name is Johann Vasquez" width="200">
-        <p>Hi! My name is Johann Vasquez, I'm from Panama City, Panama.I love computers and programming. I’m currently
-            studying software development at BYU, and it is amazing how much I can learn from them and all that they’re
-            capable of. I'm excited to learn more about web development and how web pages work.</p>
+        <p>Hi! My name is Johann Vasquez, and I'm from Panama City, Panama. I have a deep passion for computers and
+            programming, especially exploring new technologies and solving complex problems through code. I’m currently
+            studying software development at BYU, and I’m constantly amazed by how much there is to learn and the
+            endless possibilities technology offers.
+            I'm particularly excited about web development and understanding how web pages function behind the scenes. I
+            want to master building dynamic, user-friendly applications. Beyond coding, I enjoy collaborating on
+            projects, learning from others, and staying updated with the latest industry trends.
+            My goal is to become a well-rounded developer, contribute to meaningful projects, and maybe even launch my
+            own startup one day. The tech field is always evolving, and I love the challenge of keeping up with new
+            advancements. Whether it's debugging code, designing interfaces, or optimizing performance, I find every
+            aspect of development fascinating. I can't wait to see where this journey takes me and the impact I can make
+            in the digital world!</p>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/washington-d.c.-temple?lang=eng"
+                    target="_blank">Washington D.C. Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple?lang=eng"
+                    target="_blank">Lima Peru Los Olivos Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/san-salvador-el-salvador-temple?lang=eng"
+                    target="_blank">San Salvador El Salvador Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Panama</h2>
         <img src="images/panama.webp" alt="Panama City">
         <p>Panama City is full of life—bright sun shines on tall buildings while fishermen work by the water. The old
@@ -35,5 +55,6 @@
         <p>&copy;2025 💻 Johann Vasquez 💻 Panama, Panama</p>
     </footer>
 </body>
+<!--16/7/2025-->
 
 </html>
