--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Johann Vasquez WDD130,White water rafting: Best locations, rapid classes, and safety tips for beginners & experts. Plan your next adrenaline-packed adventure! ">
+    <meta name="description"
+        content="Johann Vasquez WDD130,White water rafting: Best locations, rapid classes, and safety tips for beginners & experts. Plan your next adrenaline-packed adventure! ">
     <meta name="author" content="Johann Vasquez">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Raleway&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/rafting.css">
     <title>White Water Rafting</title>
 </head>
+
 <body>
     <header>
         <img src="images/white-water-logo.png" alt="Rafting company logo">
@@ -30,19 +31,22 @@
             <h1>White Water Rafting</h1>
             <article>
                 <img src="images/jose-vasquez.webp" alt="Jose Vasquez">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vel vitae nostrum aspernatur et ullam rerum sunt consequuntur, eos id!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vel vitae nostrum aspernatur et
+                    ullam rerum sunt consequuntur, eos id!</p>
             </article>
         </div>
         <section>
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ducimus illum libero mollitia asperiores dolor fugiat unde. Enim, tenetur maiores similique optio commodi quaerat, rem minima veritatis ullam rerum praesentium.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ducimus illum libero mollitia
+                asperiores dolor fugiat unde. Enim, tenetur maiores similique optio commodi quaerat, rem minima
+                veritatis ullam rerum praesentium.</p>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
             <img src="images/group-in-river.webp" alt="Group in river">
-            <img src="images/image-helmet.webp" alt="Helmets">
-            <img src="images/image-river.webp" alt="River">
-            <img src="images/image-paddles.webp" alt="Paddles">
+            <img src="images/image-helmet.webp" alt="Helmets on top of the raft">
+            <img src="images/image-river.webp" alt="white water river">
+            <img src="images/image-paddles.webp" alt="Paddles and raft">
             <img src="images/group.webp" alt="Group in land">
         </section>
     </main>
@@ -50,15 +54,16 @@
         <p>&copy;2025 White Water Rafting, Johann Vasquez</p>
         <nav class="socialmedia">
             <a href="https://facebook.com">
-                <img src="images/facebook.webp" alt="Facebook">
+                <img src="images/facebook.webp" alt="Facebook logo">
             </a>
             <a href="https://x.com/">
-                <img src="images/x.webp" alt="X">
+                <img src="images/x.webp" alt="X logo">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram.webp" alt="Instagram">
+                <img src="images/instagram.webp" alt="Instagram logo">
             </a>
         </nav>
     </footer>
 </body>
+
 </html>
