--- a/wwr/about.html
+++ b/wwr/about.html
@@ -57,7 +57,7 @@
                 <img src="images/facebook.webp" alt="Facebook logo">
             </a>
             <a href="https://x.com/">
-                <img src="images/x.webp" alt="X socialmedia logo">
+                <img src="images/x.webp" alt="X / twitter logo">
             </a>
             <a href="https://instagram.com">
                 <img src="images/instagram.webp" alt="Instagram logo">
