W04 Rafting Project: Update About Us Page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -17,12 +17,12 @@
 
 <body>
     <header>
-        <img src="images/white-water-logo.png" alt="Rafting company logo">
+        <img class="logo" src="images/white-water-logo.png" alt="Rafting company logo">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact Us</a>
+            <a class="index" href="index.html">Home</a>
+            <a class="about" href="about.html">About Us</a>
+            <a class="trips" href="trips.html">Trips</a>
+            <a class="contact" href="contact.html">Contact Us</a>
         </nav>
     </header>
     <main>
@@ -35,19 +35,41 @@
                     ullam rerum sunt consequuntur, eos id!</p>
             </article>
         </div>
-        <section>
-            <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ducimus illum libero mollitia
+        <section class="history">
+            <h2 class="history-title">History</h2>
+            <p class="history-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ducimus illum
+                libero
+                mollitia
                 asperiores dolor fugiat unde. Enim, tenetur maiores similique optio commodi quaerat, rem minima
-                veritatis ullam rerum praesentium.</p>
+                veritatis ullam rerum.</p>
+            <img class="history-img" src="images/rafting-history.webp" alt="Rafting History">
+            <p class="history-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, a. Eum provident
+                unde
+                suscipit dolores hic, maxime nobis eos cumque animi beatae doloribus aperiam libero veniam deserunt
+                pariatur at fugit?</p>
         </section>
-        <section>
-            <h2>Adventure Awaits You!</h2>
-            <img src="images/group-in-river.webp" alt="Group in river">
-            <img src="images/image-helmet.webp" alt="Helmets on top of the raft">
-            <img src="images/image-river.webp" alt="white water river">
-            <img src="images/image-paddles.webp" alt="Paddles and raft">
-            <img src="images/group.webp" alt="Group in land">
+        <section class="adventure">
+            <h2 class="adventure-title">Adventure Awaits You!</h2>
+            <figure>
+                <img class="adventure-img" src="images/group-in-river.webp" alt="Group in river">
+                <figcaption class="adventure-text">Thrilling Rapids Action</figcaption>
+            </figure>
+            <figure>
+                <img class="adventure-img" src="images/image-helmet.webp" alt="Helmets on top of the raft">
+                <figcaption class="adventure-text">Gear Ready for the Ride</figcaption>
+            </figure>
+            <figure>
+                <img class="adventure-img" src="images/image-river.webp" alt="white water river">
+                <figcaption class="adventure-text">Pristine River Scenery</figcaption>
+            </figure>
+            <figure>
+                <img class="adventure-img" src="images/image-paddles.webp" alt="Paddles and raft">
+                <figcaption class="adventure-text">Paddle Power Close‑Up</figcaption>
+            </figure>
+            <figure>
+                <img class="adventure-img" src="images/group.webp" alt="Group in land">
+                <figcaption class="adventure-text">Rafting crew—wild water, big laughs!</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
