W05 Rafting Project Contact Us Page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,10 +28,10 @@
     <main>
         <div class="hero">
             <img src="images/wwr-hero.webp" alt="White water rafting hero image">
-            <h1>White Water Rafting</h1>
-            <article>
+            <h1 class="name">White Water Rafting</h1>
+            <article class="costumer">
                 <img src="images/jose-vasquez.webp" alt="Jose Vasquez">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vel vitae nostrum aspernatur et
+                <p class="costumer-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vel vitae nostrum aspernatur et
                     ullam rerum sunt consequuntur, eos id!</p>
             </article>
         </div>
@@ -73,7 +73,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy;2025 White Water Rafting, Johann Vasquez</p>
+        <p class="company">&copy;2025 White Water Rafting, Johann Vasquez</p>
         <nav class="socialmedia">
             <a href="https://facebook.com">
                 <img src="images/facebook.webp" alt="Facebook logo">
