--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -85,7 +85,7 @@
                     </div>
                 </fieldset>
                 <fieldset>
-                    <legend>Questions</legend>
+                    <legend>Purpose</legend>
                     <div>
                         <p>Please select the option that best describes the purpose of your message:</p>
                         <div class="radio-option">
