--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -114,8 +114,9 @@
         </section>
     </main>
     <footer>
-        <p>&copy;2025 White Water Rafting, Johann Vasquez <a class="wireframe" href="https://app.moqups.com/sI5zrBXJXMw5AXGePiSSN7ez5JOJJoim/view/page/a29c2ffc7">(Wireframe)</a></p>
-        
+        <p>&copy;2025 White Water Rafting, Johann Vasquez <a class="wireframe"
+                href="https://app.moqups.com/sI5zrBXJXMw5AXGePiSSN7ez5JOJJoim/view/page/a29c2ffc7">(Wireframe)</a></p>
+
         <nav class="socialmedia">
             <a href="https://facebook.com">
                 <img src="images/facebook.webp" alt="Facebook logo">
