W06 Project Rafting Site – Home and Trips Pages

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                 </fieldset>
-                <button type="submit">Submit</button>
+                <button type="submit">Send Message</button>
             </form>
         </section>
     </main>
