--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Raleway&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/rafting.css">
-    <title>White Water Rafting</title>
+    <title>White Water Rafting, About Us Page!</title>
 </head>
 
 <body>
