--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/trips-hero.webp" alt="Home page hero image">
+            <img src="images/trips-hero.webp" alt="Trips page hero image">
             <h1 class="name">White Water Rafting Adventures</h1>
         </div>
         <a class="call-action" href="contact.html">Book Your Rafting Trip Now</a>
